--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 </head>
 
 <body>
@@ -44,15 +45,23 @@
             <p>48%</p>
         </div>
 
+        <button class="cybr-btn" onclick="window.open('referencias/curriculo.pdf')">
+            Curriculo<span aria-hidden>_</span>
+            <span aria-hidden class=" cybr-btn__glitch ">Curriculo_</span>
+            <span aria-hidden class="cybr-btn__tag ">R25</span>
+        </button>
     </h2>
 
 
-    <div id="msg"></div>
+
+    <div id="msg "></div>
 
 
 
 
-
+    <footer>
+        <p> ©Copyright - Nicolas Schiming</p>
+    </footer>
 
 
 
